src/objects/Som_Top1Wirtschaftsbereich__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration
Hilfetext	Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration
Hilfetext	Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_BranchenChampionMi__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branchen-Experte aus dem Bereich Sales Steering &amp; Market Insights (MI) gem. CRMSALES 386</description>
        <inlineHelpText>Branchen-Experte aus dem Bereich Sales Steering &amp; Market Insights (MI)</inlineHelpText>
        <label>Branchen Champion MI</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Top1_Wirtschaftsbereich</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_BranchenChampion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branchen-Experte aus dem Bereich Sales gem. CRMSALES 386</description>
        <inlineHelpText>Branchen-Experte aus dem Bereich Sales</inlineHelpText>
        <label>Branchen Champion Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BranchenChampion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_TrendsExAnte__c</fullName>
        <description>Aktuelle sowie künftige Trends im Wirtschaftsbereich gem. CRMSALES 386</description>
        <inlineHelpText>Aktuelle sowie künftige Trends im Wirtschaftsbereich</inlineHelpText>
        <label>Trends - ex ante</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Som_Werbemarkt__c</fullName>
        <description>Entwicklung der Bruttowerbespendings (lt. Nielsen Media Research) im Wirtschaftsbereich [Verantwortlich: BC Market Insights] gem. CRMSALES-386</description>
        <inlineHelpText>Entwicklung der Bruttowerbespendings (lt. Nielsen Media Research) im Wirtschaftsbereich [Verantwortlich: BC Market Insights]</inlineHelpText>
        <label>Werbemarkt</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Som_Zusatzinformationen__c</fullName>
        <description>Ergänzungen und besondere Informationen gem. CRMSALES 386</description>
        <inlineHelpText>Ergänzungen und besondere Informationen</inlineHelpText>
        <label>Zusatzinformation Branche</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Top1 Wirtschaftsbereich</label>
    <listViews>
        <fullName>Alle</fullName>
        <columns>NAME</columns>
        <columns>Som_BranchenChampionMi__c</columns>
        <columns>Som_BranchenChampion__c</columns>
        <columns>Som_TrendsExAnte__c</columns>
        <columns>Som_Werbemarkt__c</columns>
        <columns>Som_Zusatzinformationen__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Top1 Wirtschaftsbereich</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Top1 Wirtschaftsbereich</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>